width & height issues fixed, etc. todo: y scrollbar hiding on select click causes width change

--- a/gceInstances.css
+++ b/gceInstances.css
@@ -21,8 +21,8 @@ md-input-container {
     padding-bottom:1px;
 }
 
-md-content {
-    padding:25px;
+md-content#data {
+    padding:25px 5px 25px 25px;
 }
 
 .activeColumn {
@@ -31,6 +31,10 @@ md-content {
 
 .passiveColumn {
     color: #ffffff;
+}
+
+md-sidenav.md-locked-open, section#allContent {
+    min-height:100%;
 }
 
 /* -- import Roboto Font ---------------------------- */
@@ -54,6 +58,7 @@ body {
     position: relative;
     min-height: 100%;
     height: 100%;
+    max-width:100%;
 }
 html {
     position: relative;
@@ -75,7 +80,9 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
+
 }
+
 #demo {
     margin: 20px auto;
     max-width: 960px;
@@ -139,6 +146,9 @@ body {
     cursor:pointer;
     color:#999999;
     overflow: hidden;
+}
+.table > thead > tr > th:focus {
+    outline:none;
 }
 .table > caption + thead > tr:first-child > th,
 .table > colgroup + thead > tr:first-child > th,
